Fixed right side spacing issue. Added added services page

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,5 +1,5 @@
 .body {
-  background-image: url("/src/assets/images/images.jpg");
+  /* background-image: url("/src/assets/images/images.jpg"); */
   background-size: cover; /* Makes the image cover the entire page */
   background-position: center center; /* Centers the image */
   background-repeat: no-repeat;
